# vlm_hacks

./: .gitignore  README.md  pyproject.toml
data/pdf/: pdf_descriptions.json  pdf_descriptions_lowres.json
data/txt/: instructions.txt  objects.txt
src/config/: openai_client.py  settings.py
src/eval/: deepeval_pdfs.py  deepeval_txt.py
src/load_attack_images/: load_pdfs.py  load_txt.py
src/make_images/: image_utils.py  pdf2image.py  transforms.py  txt2image.py
